    constant to a non-EQL value; CONTINUE and ABORT restarts
    respectively change and preserve the value.
  * fixed bug 63: the code walker, part of the implementation of CLOS,
    is better at handling symbol macros.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** NIL is now allowed as a structure slot name.
    ** arbitrary numbers, not just reals, are allowed in certain
       circumstances in LOOP for-as-arithmetic clauses.
    ** multiple class redefinitions before slot access no longer
       causes a type error.
    ** (SETF FIND-CLASS) now accepts NIL as an argument to remove the
       association between the name and a class.
    ** generic functions with non-standard method-combination and over
       six methods all of which return constants no longer return NIL
       after the first few invocations.  (thanks to Gerd Moellmann)
    ** CALL-NEXT-METHOD with no arguments now passes the original
       values of the arguments, even in the presence of assignment.
    ** functions [N]SUBST*, LAST, NRECONC, [N]SUBLIS may return any
       object.
    ** DISASSEMBLE works with closures and funcallable instances.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.